# foocafe-rust

./: .gitignore  .gitmodules  README.md
code-samples/#1 Cargo/: Cargo.txt
code-samples/Compiler/: Compiler.txt
code-samples/Language & Syntax/: Lang.txt
notes/#1 Cargo, Crates and Modules/: Cargo.txt
notes/Compiler/: Compiler.txt
notes/Language & Syntax/: Lang.txt
notes/Safe/: Safe.txt
rust-samples/: Cargo.toml
rust-samples/examples/: basics.rs  closures.rs  collections.rs  concurrency.rs  enums.rs  errors.rs  match.rs  patterns.rs
rust-samples/examples/03-compiler/: main,rs
rust-samples/src/: lib.rs
rust-samples/tests/: compare_size.rs
slides/: slides.txt
