[package]
name = "rust-samples"
version = "0.1.0"
authors = ["Colin <colin.ingram@bimobject.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.*"

# Here you can set up compiled examples that end up in target/examples
# And can be run with cargo run --examples [example name]

[[example]]
name="basics"
path="examples/basics.rs"

[[example]]
name="collections"
path="examples/collections.rs"

[[example]]
name="enums"
path="examples/enums.rs"

[[example]]
name="match"
path="examples/match.rs"

[[example]]
name="mutability"
path="examples/mutability.rs"